# mio

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
example/: CMakeLists.txt
example/window/: CMakeLists.txt
example/window/src/: main.cpp
include/: mio.hpp
include/mio/: button_state.hpp  circle.hpp  circle.inl  clock.hpp  color.hpp  context.hpp  device_state.hpp  event.hpp  event.inl  event_types.hpp  exception.hpp  font.hpp  gamepad.hpp  gamepad_axis.hpp  gamepad_button.hpp  image.hpp  keyboard.hpp  locator.hpp  locator.inl  math.hpp  mixer.hpp  mouse.hpp  mouse_button.hpp  music.hpp  point.hpp  point.inl  random.hpp  random.inl  rectangle.hpp  rectangle.inl  renderer.hpp  scancode.hpp  sound.hpp  texture.hpp  texture_access.hpp  window.hpp
include/mio/detail/: gamepad.hpp  gamepad_axis.hpp  gamepad_button.hpp  mouse_button.hpp  scancode.hpp  texture_access.hpp
src/: clock.cpp  color.cpp  context.cpp  event.cpp  exception.cpp  font.cpp  gamepad.cpp  image.cpp  keyboard.cpp  math.cpp  mixer.cpp  mouse.cpp  music.cpp  random.cpp  renderer.cpp  sound.cpp  texture.cpp  window.cpp
src/detail/: gamepad.cpp  gamepad_axis.cpp  gamepad_button.cpp  mouse_button.cpp  scancode.cpp  texture_access.cpp
