###############################################################################
# Set project name.
###############################################################################
cmake_minimum_required(VERSION 3.9.0)
project(window)

###############################################################################
# Set project variables.
###############################################################################
set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

###############################################################################
# Create target executable.
###############################################################################
add_executable(${PROJECT_NAME} ${SRC_DIR}/main.cpp)

###############################################################################
# Set target dependencies.
###############################################################################
target_link_libraries(${PROJECT_NAME} PRIVATE mio)

###############################################################################
# Set target C++ standard.
###############################################################################
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)

###############################################################################
# Set target warning flags.
###############################################################################
if(MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE /W4)
else()
    target_compile_options(${PROJECT_NAME} PRIVATE -Wall)
endif()

